--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/headerbg">
 
 
-        <TextView
+        <com.kredivation.aakhale.components.ASTTextView
             android:id="@+id/signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             android:textSize="@dimen/_14dp" />
 
 
-        <TextView
+        <com.kredivation.aakhale.components.ASTTextView
             android:id="@+id/login"
             android:layout_width="@dimen/_250dp"
             android:layout_height="@dimen/_35dp"
@@ -67,7 +67,7 @@
             android:orientation="vertical">
 
 
-            <TextView
+            <com.kredivation.aakhale.components.ASTTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -79,7 +79,7 @@
                 android:textSize="@dimen/_14dp" />
 
 
-            <TextView
+            <com.kredivation.aakhale.components.ASTTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -113,7 +113,7 @@
     </android.support.v7.widget.CardView>
 
 
-    <Button
+    <com.kredivation.aakhale.components.ASTButton
         android:id="@+id/continuebtn"
         android:layout_width="@dimen/_190dp"
         android:layout_height="wrap_content"
