--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -59,7 +59,7 @@
 
     </LinearLayout>-->
 
-    <TextView
+    <com.kredivation.aakhale.components.ASTTextView
         android:id="@+id/tvBody"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -67,7 +67,7 @@
         android:textColor="#000000"
         android:textSize="14sp" />
 
-    <Button
+    <com.kredivation.aakhale.components.ASTButton
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
