--- a/app/src/main/res/layout/fn_tile_view.xml
+++ b/app/src/main/res/layout/fn_tile_view.xml
@@ -58,7 +58,7 @@
                             android:gravity="center"
                             android:padding="@dimen/_12dp">
 
-                           <com.kredivation.aakhale.utility.ASTImageView
+                           <com.kredivation.aakhale.components.ASTImageView
                                 android:id="@+id/image"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
