--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -9,9 +9,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:padding="@dimen/_5dp"
         app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp">
+        app:cardElevation="@dimen/_5dp"
+        android:minHeight="@dimen/_100dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -35,41 +37,47 @@
                 android:padding="@dimen/_5dp">
 
                 <TextView
-                    android:id="@+id/dateTime"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1 June 2018,04:09 PM"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="FRIDAY"
-                    android:textSize="@dimen/_12dp" />
 
                 <TextView
-                    android:id="@+id/planid"
+                    android:id="@+id/address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="INDIA VS USA"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/matchType"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TEST(3/4)"
-                    android:textSize="@dimen/_12dp" />
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_5dp">
 
-                <TextView
-                    android:id="@+id/venue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Delhi INDIA"
-                    android:textSize="@dimen/_12dp" />
+                    <com.kredivation.aakhale.components.ASTFontTextIconView
+                        android:id="@+id/matchIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="TEST(3/4)"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/moreGamesTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+ 16 More games.."
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
 
             </LinearLayout>
 
