--- a/app/src/main/res/layout/pager_item.xml
+++ b/app/src/main/res/layout/pager_item.xml
@@ -8,9 +8,9 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_height="@dimen/_140dp"
         app:cardCornerRadius="@dimen/_5dp"
+         app:cardUseCompatPadding="true"
         app:cardElevation="@dimen/_5dp">
 
         <ImageView
