--- a/app/src/main/res/layout/toperformancer_item.xml
+++ b/app/src/main/res/layout/toperformancer_item.xml
@@ -1,24 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_gravity="center">
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp">
+        android:id="@+id/cardViewLayout"
+        android:layout_width="@dimen/_160dp"
+        android:layout_height="@dimen/_155dp"
+        android:layout_gravity="center"
+        card_view:cardCornerRadius="@dimen/_8dp"
+        card_view:cardElevation="@dimen/_5dp"
+        card_view:cardUseCompatPadding="true">
 
-        <ImageView
-            android:id="@+id/metal_text"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center" />
+            android:layout_weight="1">
 
+            <ImageView
+                android:id="@+id/bgimage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitXY"
+                android:src="@drawable/tropy1" />
+
+
+
+            <com.kredivation.aakhale.components.ASTTextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="@dimen/_5dp"
+                android:layout_marginRight="@dimen/_5dp"
+                android:layout_marginBottom="@dimen/_5dp"
+                android:background="@android:color/transparent"
+                android:text="Sachin Ram Semwal"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
-
 </FrameLayout>
