--- a/app/src/main/res/layout/fragment_create_team.xml
+++ b/app/src/main/res/layout/fragment_create_team.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.MainActivity">
 
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/_10dp"
+            android:layout_margin="@dimen/_12dp"
             android:orientation="vertical">
 
             <TextView
@@ -25,7 +25,7 @@
                 android:layout_margin="@dimen/_5dp"
                 android:padding="@dimen/_5dp"
                 android:text="Team Name"
-                android:textSize="@dimen/_14dp"
+                android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
 
             <com.kredivation.aakhale.components.ASTEditText
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="@dimen/_5dp"
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
-                android:padding="@dimen/_14dp"
+                android:padding="@dimen/_12dp"
                 android:textSize="@dimen/_12dp" />
 
 
@@ -45,7 +45,7 @@
                 android:layout_margin="@dimen/_5dp"
                 android:padding="@dimen/_5dp"
                 android:text="About Team"
-                android:textSize="@dimen/_14dp"
+                android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
 
             <com.kredivation.aakhale.components.ASTEditText
@@ -56,7 +56,7 @@
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
                 android:minHeight="@dimen/_90dp"
-                android:padding="@dimen/_14dp"
+                android:padding="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
 
 
@@ -78,7 +78,7 @@
                         android:layout_margin="@dimen/_5dp"
                         android:layout_weight="1"
                         android:text="Select State"
-                        android:textSize="@dimen/_14dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
 
@@ -88,7 +88,7 @@
                         android:layout_margin="@dimen/_5dp"
                         android:layout_weight="1"
                         android:text="Select City"
-                        android:textSize="@dimen/_14dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
 
@@ -98,9 +98,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_40dp"
-                    android:layout_marginLeft="@dimen/_10dp"
-                    android:layout_marginTop="@dimen/_10dp"
-                    android:layout_marginRight="@dimen/_10dp"
+                    android:layout_marginLeft="@dimen/_12dp"
+                    android:layout_marginTop="@dimen/_12dp"
+                    android:layout_marginRight="@dimen/_12dp"
                     android:orientation="horizontal">
 
 
@@ -160,7 +160,7 @@
                 android:layout_margin="@dimen/_5dp"
                 android:padding="@dimen/_5dp"
                 android:text="Zipcode"
-                android:textSize="@dimen/_14dp"
+                android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
 
             <com.kredivation.aakhale.components.ASTEditText
@@ -170,7 +170,7 @@
                 android:layout_marginLeft="@dimen/_5dp"
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
-                android:padding="@dimen/_14dp"
+                android:padding="@dimen/_12dp"
                 android:textSize="@dimen/_12dp" />
 
             <LinearLayout
@@ -184,13 +184,14 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/addplayelbl"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_5dp"
-                        android:layout_weight=".7"
+                        android:layout_weight=".6"
                         android:padding="@dimen/_5dp"
                         android:text="Add Player(Enter Unique Id)"
-                        android:textSize="@dimen/_10dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
 
@@ -199,11 +200,12 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_5dp"
-                        android:layout_weight=".3"
+                        android:gravity="right"
+                        android:layout_weight=".4"
                         android:padding="@dimen/_5dp"
                         android:text="+Add More"
                         android:textColor="@color/orange"
-                        android:textSize="@dimen/_14dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -238,7 +240,7 @@
                         android:layout_weight=".6"
                         android:padding="@dimen/_5dp"
                         android:text="Team Thumblin"
-                        android:textSize="@dimen/_10dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
 
@@ -250,25 +252,34 @@
                         android:layout_weight=".4"
                         android:padding="@dimen/_5dp"
                         android:text="+ Select Photo"
+                        android:gravity="right"
                         android:textColor="@color/orange"
-                        android:textSize="@dimen/_14dp"
+                        android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
 
 
                 <GridView
-                    android:id="@+id/imagethumblinView"
-                    android:layout_width="match_parent"
+                    android:id="@+id/gridView"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:numColumns="3" />
+                    android:layout_margin="5dp"
+                    android:columnWidth="100dp"
+                    android:drawSelectorOnTop="true"
+                    android:gravity="center"
+                    android:numColumns="auto_fit"
+                    android:stretchMode="columnWidth"
+                    android:verticalSpacing="5dp"
+                    android:focusable="true"
+                    android:clickable="true"/>
 
 
             </LinearLayout>
 
 
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <com.kredivation.aakhale.components.ASTButton
         android:id="@+id/continuebtn"
@@ -279,7 +290,7 @@
         android:background="@drawable/button_login"
         android:gravity="center"
         android:padding="@dimen/_5dp"
-        android:text="REGISTER"
+        android:text="SAVE"
         android:textColor="@color/white"
         android:textSize="@dimen/_14dp" />
 
