--- a/app/src/main/res/layout/area_row.xml
+++ b/app/src/main/res/layout/area_row.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.SelectUserTypeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
