--- a/app/src/main/res/layout/fragment_add_academics_vfragments.xml
+++ b/app/src/main/res/layout/fragment_add_academics_vfragments.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical"
     tools:context=".fragments.AddAcademicsVFragments">
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:layout_weight="1">
 
 
@@ -237,19 +238,12 @@
                     </LinearLayout>
 
 
-                    <GridView
-                        android:id="@+id/gridView"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:columnWidth="100dp"
-                        android:drawSelectorOnTop="true"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:numColumns="auto_fit"
-                        android:stretchMode="columnWidth"
-                        android:verticalSpacing="5dp" />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/addImageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/white" />
 
 
                     <TextView
@@ -261,173 +255,20 @@
                         android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <GridView
+                        android:id="@+id/sportsgridView"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/oragnge_round_bg"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Cricket"
-                                android:textAlignment="center"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Hocky"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/oragnge_round_bg"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Foot Ball"
-                                android:textAlignment="center"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Cricket"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/oragnge_round_bg"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Hocky"
-                                android:textAlignment="center"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Foot Ball"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Cricket"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Cricket"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold"
-                                android:visibility="invisible" />
-
-                            <com.kredivation.aakhale.components.ASTTextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/_5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/round_boder"
-                                android:gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Cricket"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold"
-                                android:visibility="invisible" />
-
-
-                        </LinearLayout>
-
-                    </LinearLayout>
+                        android:layout_margin="5dp"
+                        android:clickable="true"
+                        android:columnWidth="100dp"
+                        android:drawSelectorOnTop="true"
+                        android:focusable="true"
+                        android:minHeight="@dimen/_90dp"
+                        android:gravity="center"
+                        android:numColumns="3"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="5dp" />
 
 
                 </LinearLayout>
@@ -753,7 +594,7 @@
 
 
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
 
     <com.kredivation.aakhale.components.ASTButton
