--- a/app/src/main/res/layout/umpire_row.xml
+++ b/app/src/main/res/layout/umpire_row.xml
@@ -24,7 +24,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
+                android:layout_weight="0.9"
                 android:orientation="vertical">
 
 
@@ -35,25 +35,58 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:padding="@dimen/_5dp">
 
                         <ImageView
                             android:id="@+id/imageSports"
                             android:layout_width="@dimen/_50dp"
-                            android:layout_height="@dimen/_50dp"
+                            android:layout_height="match_parent"
                             android:padding="@dimen/_2dp"
                             android:src="@drawable/p4"
                             android:textSize="@dimen/_12dp"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/titleName"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textSize="@dimen/_12dp" />
+                            android:orientation="vertical">
+
+
+                            <TextView
+                                android:id="@+id/umpireName"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:padding="@dimen/_5dp"
+                                android:text="Ramayanv Raj"
+                                android:textSize="@dimen/_14dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/matchUmpite"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:padding="@dimen/_5dp"
+                                android:text="Cricket Umpire"
+                                android:textSize="@dimen/_14dp" />
+
+
+                            <TextView
+                                android:id="@+id/uniqeId"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:padding="@dimen/_5dp"
+                                android:text="567JutgV"
+                                android:textColor="@color/orange"
+                                android:textSize="@dimen/_14dp" />
+
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
                 </LinearLayout>
@@ -65,7 +98,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/_5dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.1"
                 android:gravity="center"
                 android:orientation="vertical">
 
