--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -55,6 +55,11 @@
             android:id="@+id/adumpire"
             android:icon="@drawable/ic_menu_manage"
             android:title="Add Umpires" />
+
+        <item
+            android:id="@+id/Schedule"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Schedule" />
     </group>
 
     <item android:title="Communicate">
