--- a/app/src/main/res/drawable/border_layout_orange.xml
+++ b/app/src/main/res/drawable/border_layout_orange.xml
@@ -5,5 +5,5 @@
         android:width="1dp"
         android:color="@color/orange" />
     <corners android:radius="10dp" />
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@color/orange" />
 </shape>
