--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Add Team" />
+            android:title="Create Team" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -60,6 +60,13 @@
             android:id="@+id/Schedule"
             android:icon="@drawable/ic_menu_manage"
             android:title="Schedule" />
+
+        <item
+            android:id="@+id/addTeam"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Add TEam" />
+
+
     </group>
 
     <item android:title="Communicate">
