--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -210,12 +210,11 @@
                         android:id="@+id/experience"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_40dp"
-                        android:layout_marginLeft="@dimen/_10dp"
-                        android:layout_marginTop="@dimen/_10dp"
-                        android:layout_marginRight="@dimen/_10dp"
-                        android:background="@drawable/edittextround"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:hint="Years of Experience"
                         android:inputType="number"
+                        android:background="@drawable/edittextround"
                         android:padding="@dimen/_10dp"
                         android:singleLine="true"
                         android:textSize="@dimen/_12dp" />
@@ -250,8 +249,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:entries="@array/sportsname"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp" />
+                        android:gravity="center" />
 
 
                 </LinearLayout>
@@ -285,8 +283,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:entries="@array/role"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp" />
+                        android:gravity="center" />
 
 
                 </LinearLayout>
@@ -298,7 +295,7 @@
     </ScrollView>
 
     <com.kredivation.aakhale.components.ASTButton
-        android:id="@+id/continuebtn"
+        android:id="@+id/registerBtn"
         android:layout_width="@dimen/_190dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
