--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -77,7 +77,7 @@
                 android:layout_marginTop="@dimen/_10dp"
                 android:layout_marginRight="@dimen/_10dp"
                 android:background="@drawable/edittextround"
-                android:hint="Register Email/Mobile Number"
+                android:hint="Register Email Id"
                 android:padding="@dimen/_10dp"
                 android:textSize="@dimen/_12dp" />
 
@@ -90,7 +90,8 @@
                 android:layout_marginTop="@dimen/_10dp"
                 android:layout_marginRight="@dimen/_10dp"
                 android:background="@drawable/edittextround"
-                android:hint="ENTER OTP"
+                android:hint="Enter OTP"
+                android:visibility="gone"
                 android:padding="@dimen/_10dp"
                 android:textSize="@dimen/_12dp" />
 
@@ -118,14 +119,14 @@
 
 
                 <com.kredivation.aakhale.components.ASTTextView
-                    android:id="@+id/valid5min"
+                    android:id="@+id/resend"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/_10dp"
                     android:gravity="center"
                     android:paddingBottom="@dimen/_10dp"
-                    android:text="OTP VALID FOT 5 MIN"
+                    android:text="Resend OTP"
                     android:textColor="@color/orange"
                     android:textSize="@dimen/_12dp" />
 
