--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,7 @@
                 android:layout_marginTop="@dimen/_10dp"
                 android:layout_marginRight="@dimen/_10dp"
                 android:background="@drawable/edittextround"
-                android:hint="Register Email/Mobile Number"
+                android:hint="Register Email Id"
                 android:padding="@dimen/_10dp"
                 android:textSize="@dimen/_12dp" />
 
@@ -90,7 +90,11 @@
                 android:layout_marginTop="@dimen/_10dp"
                 android:layout_marginRight="@dimen/_10dp"
                 android:background="@drawable/edittextround"
-                android:hint="OTP/Password"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:imeActionLabel="Sign in"
+                android:imeOptions="actionUnspecified"
+                android:singleLine="true"
                 android:padding="@dimen/_10dp"
                 android:textSize="@dimen/_12dp" />
 
