--- a/app/src/main/res/layout/fragment_create_ground.xml
+++ b/app/src/main/res/layout/fragment_create_ground.xml
@@ -25,7 +25,7 @@
                 android:textStyle="bold" />
 
             <com.kredivation.aakhale.components.ASTEditText
-                android:id="@+id/matchName"
+                android:id="@+id/gName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5dp"
@@ -134,7 +134,7 @@
                             android:layout_gravity="center"
                             android:entries="@array/state"
                             android:gravity="center"
-                            android:padding="@dimen/_5dp" />
+                            />
 
 
                     </LinearLayout>
