--- a/app/src/main/res/layout/fragment_add_academics_vfragments.xml
+++ b/app/src/main/res/layout/fragment_add_academics_vfragments.xml
@@ -150,7 +150,7 @@
 
 
                     <Spinner
-                        android:id="@+id/sitySpinner"
+                        android:id="@+id/citySpinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
