--- a/app/src/main/res/layout/fragment_create_match.xml
+++ b/app/src/main/res/layout/fragment_create_match.xml
@@ -116,8 +116,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:entries="@array/state"
-                            android:gravity="center"
-                            android:padding="@dimen/_5dp" />
+                            android:gravity="center" />
 
 
                     </LinearLayout>
@@ -221,6 +220,7 @@
 
 
                         <com.kredivation.aakhale.components.ASTEditText
+                            android:id="@+id/timeTxt"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -245,6 +245,7 @@
 
 
                             <ImageView
+                                android:id="@+id/timeImage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
@@ -268,7 +269,7 @@
 
 
                         <com.kredivation.aakhale.components.ASTEditText
-                            android:id="@+id/dobEdt"
+                            android:id="@+id/dateTxt"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -411,7 +412,6 @@
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5dp"
                             android:layout_weight="1"
-                            android:background="@drawable/edittextround"
                             android:gravity="center"
                             android:orientation="horizontal">
 
@@ -422,6 +422,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/_5dp"
                                 android:layout_marginRight="@dimen/_5dp"
+                                android:background="@drawable/edittextround"
                                 android:padding="@dimen/_12dp"
                                 android:textSize="@dimen/_12dp" />
 
