--- a/app/src/main/res/layout/fragment_create_match.xml
+++ b/app/src/main/res/layout/fragment_create_match.xml
@@ -18,7 +18,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
+                android:layout_margin="@dimen/_3dp"
                 android:padding="@dimen/_5dp"
                 android:text="Match Name"
                 android:textSize="@dimen/_12dp"
@@ -399,6 +399,7 @@
                                 android:id="@+id/matchtype"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:entries="@array/matchtype"
                                 android:layout_gravity="center"
                                 android:gravity="center" />
 
@@ -422,6 +423,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/_5dp"
                                 android:layout_marginRight="@dimen/_5dp"
+                                android:inputType="number"
                                 android:background="@drawable/edittextround"
                                 android:padding="@dimen/_12dp"
                                 android:textSize="@dimen/_12dp" />
@@ -448,6 +450,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_5dp"
                     android:layout_marginRight="@dimen/_5dp"
+                    android:inputType="number"
                     android:background="@drawable/round_boder"
                     android:padding="@dimen/_12dp"
                     android:textSize="@dimen/_12dp" />
