--- a/app/src/main/res/layout/fragment_create_team.xml
+++ b/app/src/main/res/layout/fragment_create_team.xml
@@ -120,8 +120,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:minHeight="@dimen/_30dp"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:minHeight="@dimen/_30dp" />
 
 
                     </LinearLayout>
@@ -144,8 +144,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:entries="@array/state"
-                            android:minHeight="@dimen/_30dp"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:minHeight="@dimen/_30dp" />
 
 
                     </LinearLayout>
@@ -187,7 +187,7 @@
                         android:id="@+id/addplayelbl"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
+                        android:layout_margin="@dimen/_4dp"
                         android:layout_weight=".6"
                         android:padding="@dimen/_5dp"
                         android:text="Add Player(Enter Unique Id)"
@@ -199,9 +199,9 @@
                         android:id="@+id/addMoreView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
-                        android:gravity="right"
+                        android:layout_margin="@dimen/_2dp"
                         android:layout_weight=".4"
+                        android:gravity="right"
                         android:padding="@dimen/_5dp"
                         android:text="+Add More"
                         android:textColor="@color/orange"
@@ -210,14 +210,12 @@
 
                 </LinearLayout>
 
-
-                <ListView
-                    android:id="@+id/AddPlayerLIst"
+                <LinearLayout
+                    android:id="@+id/addPlayerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5dp"
-                    android:layout_marginRight="@dimen/_5dp"
-                    android:textSize="@dimen/_12dp" />
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp" />
 
 
             </LinearLayout>
@@ -250,9 +248,9 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_5dp"
                         android:layout_weight=".4"
+                        android:gravity="right"
                         android:padding="@dimen/_5dp"
                         android:text="+ Select Photo"
-                        android:gravity="right"
                         android:textColor="@color/orange"
                         android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
@@ -260,19 +258,12 @@
                 </LinearLayout>
 
 
-                <GridView
-                    android:id="@+id/gridView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:columnWidth="100dp"
-                    android:drawSelectorOnTop="true"
-                    android:gravity="center"
-                    android:numColumns="auto_fit"
-                    android:stretchMode="columnWidth"
-                    android:verticalSpacing="5dp"
-                    android:focusable="true"
-                    android:clickable="true"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/addImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/white" />
 
 
             </LinearLayout>
