--- a/app/src/main/res/layout/fragment_create_team.xml
+++ b/app/src/main/res/layout/fragment_create_team.xml
@@ -258,12 +258,15 @@
                 </LinearLayout>
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/addImageView"
+                <com.kredivation.aakhale.components.ASTImageView
+                    android:id="@+id/image"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/white" />
+                    android:layout_height="@dimen/_150dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/app_name"
+                    android:minWidth="@dimen/_35dp"
+                    android:minHeight="@dimen/_35dp"
+                    android:src="@drawable/noimage" />
 
 
             </LinearLayout>
