--- a/app/src/main/res/layout/fragment_tournament_list.xml
+++ b/app/src/main/res/layout/fragment_tournament_list.xml
@@ -7,21 +7,29 @@
     android:orientation="vertical"
     tools:context=".fragments.TournamentList">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="6dp"
-        app:tabTextColor="@color/white"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabMode="scrollable" />
+        android:layout_marginTop="@dimen/_2dp"
+        app:cardElevation="@dimen/_8dp">
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:minHeight="?attr/actionBarSize"
+            android:textAlignment="center"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/orange"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextColor="@color/black" />
+
+    </android.support.v7.widget.CardView>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/tab_layout" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
