--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
@@ -9,10 +9,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="@dimen/_100dp"
         android:padding="@dimen/_5dp"
         app:cardCornerRadius="@dimen/_5dp"
         app:cardElevation="@dimen/_5dp"
-        android:minHeight="@dimen/_100dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -86,4 +86,4 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+</LinearLayout>
