--- a/app/src/main/res/layout/fragment_ground.xml
+++ b/app/src/main/res/layout/fragment_ground.xml
@@ -97,7 +97,7 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
